//! # Collection Service
//!
//! gRPC service for collection management.

/// Collection service handler
pub struct CollectionService {
    // Service dependencies will be added here
}

impl CollectionService {
    pub fn new() -> Self {
        Self {}
    }
}

impl Default for CollectionService {
    fn default() -> Self {
        Self::new()
    }
}

// TODO: Implement generated collection service trait
// TODO: Move logic from src/network/grpc/collection_service.rs
